@@ -12,6 +12,8 @@ RELEASE 0.96 - XXX
 
   From Steven Knight:
 
+  - Add an Execute() method for executing actions directly.
+
 
 
 RELEASE 0.95 - Mon, 08 Mar 2004 06:43:20 -0600
